# approach-trainer

./: .gitignore  TODO.md  index.html  package.json  pyproject.toml
clips/: manifest.json  transcripts_DCNs124vBot.json  transcripts_DHHmohEOYGJ.json
clips/transcripts/: itspolokidd.jsonl
config/: youtube_channels.toml
docs/: creators.md
scripts/: backfill_durations.py  build_manifest.py  detect_cuts.py  extract_audio.sh  factory.py  factory_trigger.sh  process_batch.py  process_full.py  rename_clips.py  reprocess_ids.sh  retag_outcomes.py  run_batch_scribe.sh  run_full_pipeline.sh  segment.py  segment_trial.py  transcribe_longform.py  yt75_pipeline.sh  yt_channels_dl.sh  yt_complete.sh  yt_lang_dl.sh  yt_more_dl.sh  yt_nstv_dl.sh  yt_sergio_dl.sh
src/: drill.ts  main.ts  style.css  types.ts
src/approach_trainer/: __init__.py  cli.py  cuts.py  factory.py  languages.py  paths.py  retag.py  swservice.py  youtube.py
src/approach_trainer/ingest/: instagram.py  youtube.py
src/approach_trainer/pipeline/: audio.py  cuts.py  durations.py  factory.py  retag.py  segment.py  speaker_identity.py
